--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,7 +10,7 @@
       rel="stylesheet"
     />
 
-    <title>plann.er</title>
+    <title>EMBARQUEI</title>
   </head>
   <body class="bg-zinc-950 text-zinc-50 antialiased">
     <div id="root"></div>
